--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -10,10 +10,62 @@
 
 .register-root {
   width: 100%;
-  height: auto;
+  height: 100%;
   display: grid;
+  place-items: center;
+  grid-auto-flow: column;
   justify-content: center;
-  align-items: center;
+  background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
+  margin: 0;
+  padding-bottom: 15px;
+
+  &>div {
+    border: 2px solid rgb(199, 197, 197);
+    height: 95%;
+    width: max-content;
+    margin: 0;
+    display: grid;
+    place-items: center;
+    padding: 0;
+
+    &:nth-child(1) {
+      border-radius: 20px 0px 0px 20px;
+      background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+
+      img {
+        object-fit: fill;
+        border-radius: 50%;
+      }
+
+      p {
+        margin: 0;
+        margin-top: -10px;
+        font-size: .8em;
+        width: 500px;
+      }
+
+      h2 {
+        background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+        -webkit-background-clip: text;
+        color: transparent;
+
+      }
+    }
+
+    &:nth-child(2) {
+      border-radius: 0px 20px 20px 0px;
+      background: white;
+
+
+      h1 {
+        background-image: linear-gradient(to right, #30cfd0 0%, #330867 100%);
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 0px 64px;
+      }
+    }
+  }
+
 
   .form {
     width: 350px;
@@ -22,7 +74,7 @@
     justify-content: center;
     display: grid;
     position: relative;
-    padding:40px;
+    padding: 30px;
 
     &>.icon-control {
       justify-content: center;
@@ -40,11 +92,11 @@
       }
     }
 
+
     .form-group {
       display: grid;
-      justify-self: center;
-      align-items: center;
-      row-gap: 40px;
+      place-items: center;
+      row-gap: 10px;
 
       &.input-control {
         &:nth-child(3) {
@@ -59,6 +111,43 @@
         }
       }
 
+      .input-group {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      &>div:not(:nth-child(1), :nth-child(5)) {
+        input {
+          width: 36em;
+          height: 40px;
+        }
+      }
+
+      &>div:last-child {
+        color: rgb(117, 115, 115);
+      }
+
+      &>div:nth-child(5) {
+        margin: 0;
+        margin-top: -20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        column-gap: 5px;
+
+        input {
+          width: 15px;
+          height: 15px;
+          accent-color: rgb(50, 130, 250);
+        }
+
+        label {
+          color: rgb(61, 61, 61);
+        }
+      }
+
       .input-control {
         display: flex;
         justify-content: center;
@@ -66,34 +155,44 @@
         position: relative;
         height: 70px;
 
-        &:nth-child(4){
-          label{
-            left:45px;
+        &:nth-child(4) {
+          label {
+            left: 5px;
           }
-          .icon-control{
-            &:nth-child(4){
+
+          .icon-control {
+            &:nth-child(3) {
               position: absolute;
-              right:0px;
-              border:none;
+              right: 0px;
+              border: none;
             }
           }
         }
+
         label {
           position: absolute;
-          left: 45px;
+          left: 5px;
           background: white;
-          color:gray;
+          color: gray;
         }
-        label.focused{
-          color:red;
+
+        label.focused {
+          color: rgb(41, 111, 251);
           transform: translateY(-24px);
+          font-size: .9em;
           transition: all .5s;
         }
+
         input {
           width: 18em;
           height: 40px;
+
+          &:focus {
+            border-color: rgb(41, 111, 251);
+            outline: none;
+          }
         }
-        
+
 
         .icon-control {
           i {
@@ -102,7 +201,7 @@
           }
 
         }
-        
+
         .icon-control {
           justify-content: center;
           display: grid;
@@ -114,13 +213,276 @@
           height: 44px;
         }
       }
+
+      button {
+        font-size: 18px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        letter-spacing: 2px;
+        width: 200px;
+        height: 40px;
+      }
     }
-    button{
-      font-size: large;
-      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-      letter-spacing: 2px;
-      width:200px;
-      height: 50px;
+  }
+
+  .step-symbols {
+    border: 2px solid;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+
+    &>p:nth-child(odd) {
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all 2.2s;
+      font-size: small;
+      font-weight: 700;
+      color: darkgray;
+    }
+
+    &>p:nth-child(even) {
+      width: 50px;
+      height: 4px;
+      background: rgb(205, 199, 199);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &>p:nth-child(even) {
+      p {
+        width: 50px;
+        height: 4px;
+        background: cyan;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: all 2s;
+        transform: scale(0);
+        transform-origin: left;
+      }
+    }
+
+  }
+}
+
+.login-root {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  grid-auto-flow:column;
+  justify-content: center;
+  background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
+  margin: 0;
+  padding-bottom: 15px;
+
+  &>div {
+    border: 2px solid rgb(199, 197, 197);
+    height: 95%;
+    width: max-content;
+    margin: 0;
+    display: grid;
+    place-items: center;
+    padding: 0;
+
+    &:nth-child(2) {
+      border-radius: 0px 20px 20px 0px;
+      background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+
+      img {
+        object-fit: fill;
+        border-radius: 50%;
+      }
+
+      p {
+        margin: 0;
+        margin-top: -10px;
+        font-size: .8em;
+        width: 500px;
+      }
+
+      h2 {
+        background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+        -webkit-background-clip: text;
+        color: transparent;
+
+      }
+    }
+
+    &:nth-child(1) {
+      border-radius: 20px 0px 0px 20px;
+      background: white;
+
+
+      h1 {
+        background-image: linear-gradient(to right, #30cfd0 0%, #330867 100%);
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 0px 64px;
+      }
+    }
+  }
+
+
+  .form {
+    width: 350px;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+    display: grid;
+    position: relative;
+    padding: 30px;
+
+    &>.icon-control {
+      justify-content: center;
+      display: grid;
+      align-items: center;
+      text-align: center;
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      top: 0;
+
+      i {
+        transform: rotate(90deg);
+        font-size: x-large;
+      }
+    }
+
+
+    .form-group {
+      display: grid;
+      place-items: center;
+      row-gap: 10px;
+
+      &.input-control {
+        &:nth-child(3) {
+
+          &.icon-control {
+            &:nth-child(4) {
+              position: absolute;
+              right: 0px;
+              border: none;
+            }
+          }
+        }
+      }
+
+      .input-group {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      &>div:not(:nth-child(1), :nth-child(5)) {
+        input {
+          width: 36em;
+          height: 40px;
+        }
+      }
+
+      &>div:last-child {
+        color: rgb(117, 115, 115);
+      }
+
+      &>div:nth-child(5) {
+        margin: 0;
+        margin-top: -20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        column-gap: 5px;
+
+        input {
+          width: 15px;
+          height: 15px;
+          accent-color: rgb(50, 130, 250);
+        }
+
+        label {
+          color: rgb(61, 61, 61);
+        }
+      }
+
+      .input-control {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        height: 70px;
+
+        &:nth-child(4) {
+          label {
+            left: 5px;
+          }
+
+          .icon-control {
+            &:nth-child(3) {
+              position: absolute;
+              right: 0px;
+              border: none;
+            }
+          }
+        }
+
+        label {
+          position: absolute;
+          left: 5px;
+          background: white;
+          color: gray;
+        }
+
+        label.focused {
+          color: rgb(41, 111, 251);
+          transform: translateY(-24px);
+          font-size: .9em;
+          transition: all .5s;
+        }
+
+        input {
+          width: 18em;
+          height: 40px;
+
+          &:focus {
+            border-color: rgb(41, 111, 251);
+            outline: none;
+          }
+        }
+
+
+        .icon-control {
+          i {
+            font-size: 20px;
+            color: gray;
+          }
+
+        }
+
+        .icon-control {
+          justify-content: center;
+          display: grid;
+          align-items: center;
+          border: 1px solid;
+          border-right: none;
+          text-align: center;
+          width: 40px;
+          height: 44px;
+        }
+      }
+
+      button {
+        font-size: 18px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        letter-spacing: 2px;
+        width: 200px;
+        height: 40px;
+      }
     }
   }
 
@@ -171,7 +533,7 @@
 }
 
 .navbar-root {
-  position: relative;
+  position: fixed;
   width: 99.75vw;
   height: 100px;
   margin: 0;
@@ -181,6 +543,9 @@
   grid-template-areas: 'start center end';
   border-bottom: 2px solid gray;
   box-shadow: 3px 10px 25px -6px rgb(170, 169, 169);
+  z-index: 15;
+  background: rgba(255, 255, 255, 0.53);
+  backdrop-filter: blur(10px);
 
   &>.icon-control {
     display: none;
@@ -299,7 +664,7 @@
     z-index: 10;
     color: black;
     box-shadow: inset 12px 12px 17px #747474,
-            inset -12px -12px 17px #ffffff;
+      inset -12px -12px 17px #ffffff;
 
     .logo {
       width: 100%;
@@ -1012,6 +1377,36 @@
 
           &:not(:last-child) {
             border-right: 1px solid;
+          }
+        }
+      }
+    }
+  }
+
+  .register-root {
+    grid-template-areas: 'start';
+
+    &>div {
+      &:nth-child(1) {
+        display: none;
+      }
+
+      &:nth-child(2) {
+        transform: scale(0.9);
+
+        .form-group {
+
+          &>div:nth-child(1) {
+            input {
+              width: 15em;
+            }
+          }
+
+          &>div:not(:nth-child(1), :nth-child(5)) {
+            input {
+              width: 26em;
+              height: 40px;
+            }
           }
         }
       }
