--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -7,7 +7,6 @@
   overflow-x: hidden;
 }
 
-
 .register-root {
   width: 100%;
   height: 100%;
@@ -144,8 +143,7 @@
           accent-color: rgb(50, 130, 250);
         }
 
-        label {
-        }
+        label {}
       }
 
       .input-control {
@@ -156,14 +154,15 @@
         height: 70px;
         column-gap: 7px;
         padding-bottom: 10px;
-        
-        p{
-          font-size:.8em;
+
+        p {
+          font-size: .8em;
           position: absolute;
-          top:43px;
-          left:10px;
-          color:red;
+          top: 43px;
+          left: 10px;
+          color: red;
         }
+
         &:nth-child(4) {
           label {
             left: 5px;
@@ -191,10 +190,12 @@
           font-size: .9em;
           transition: all .5s;
         }
+
         input {
           width: 18em;
           height: 40px;
-          outline:none;
+          outline: none;
+
           &:focus {
             border-color: rgb(41, 111, 251);
             outline: none;
@@ -222,7 +223,7 @@
         }
       }
 
-      
+
       button {
         font-family: inherit;
         font-size: 18px;
@@ -238,45 +239,45 @@
         transition: all 0.2s;
         cursor: pointer;
       }
-      
+
       button span {
         display: block;
         margin-left: 0.3em;
         transition: all 0.3s ease-in-out;
       }
-      
+
       button svg {
         display: block;
         transform-origin: center center;
         transition: transform 0.3s ease-in-out;
       }
-      
+
       button:hover .svg-wrapper {
         animation: fly-1 0.6s ease-in-out infinite alternate;
       }
-      
+
       button:hover svg {
         transform: translateX(1.2em) rotate(45deg) scale(1.1);
       }
-      
+
       button:hover span {
         transform: translateX(5em);
       }
-      
+
       button:active {
         transform: scale(0.95);
       }
-      
+
       @keyframes fly-1 {
         from {
           transform: translateY(0.1em);
         }
-      
+
         to {
           transform: translateY(-0.1em);
         }
       }
-      
+
     }
   }
 
@@ -329,12 +330,28 @@
   }
 }
 
+.otp-root {
+  border: 2px solid;
+  width: 100%;
+
+  .input-group {
+    display: grid;
+    place-items: center;
+    grid-auto-flow: column;
+
+    input {
+      width: 50px;
+      height: 100px;
+    }
+  }
+}
+
 .login-root {
   width: 100%;
   height: 100%;
   display: grid;
   place-items: center;
-  grid-auto-flow:column;
+  grid-auto-flow: column;
   justify-content: center;
   background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
   margin: 0;
@@ -1451,7 +1468,7 @@
       }
 
       &:nth-child(2) {
-        border-radius:20px;
+        border-radius: 20px;
         padding-bottom: 10px;
         transform: scale(0.9);
 
