--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -69,6 +69,7 @@
   .form {
     width: 350px;
     height: auto;
+    min-height: 450px;
     align-items: center;
     justify-content: center;
     display: grid;
@@ -83,7 +84,7 @@
       width: 40px;
       height: 40px;
       position: absolute;
-      top: 0;
+      top: -20px;
 
       i {
         transform: rotate(90deg);
@@ -96,6 +97,202 @@
       display: grid;
       place-items: center;
       row-gap: 10px;
+
+      .second-form {
+        width: 400px;
+        height: 500px;
+        border: 2px solid rgb(196, 195, 195);
+        display: grid;
+        place-items: center;
+        grid-template-rows: auto auto auto auto;
+        border-radius: 20px;
+        transition: all .5s;
+
+        &>.input-control {
+          width: 350px;
+          height: 60px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          column-gap: 20px;
+          padding: 0;
+          position: relative;
+
+          &:nth-child(4) {F
+            p {
+              position: absolute;
+              left: 30px;
+              top: 30px;
+            }
+          }
+
+          &:not(:nth-child(4)) {
+            p {
+              &:first-child {
+                color: gray;
+                font-size: 1em;
+                position: relative;
+                top: -5px;
+              }
+
+              &:not(:first-child) {
+                &:nth-child(4) {
+                  left: 30px;
+                  top: 90px;
+                }
+
+                position: absolute;
+                left:250px;
+                top:28px;
+              }
+            }
+          }
+
+          label {
+            position: relative;
+            background: none;
+          }
+
+          &:not(:first-child) {
+            margin: 0;
+            height: 40px;
+
+            input {
+              width: 200px;
+              height: 40px;
+            }
+          }
+
+          &:first-child {
+            height: 200px;
+            display: flex;
+            align-items: center;
+
+            label {
+              border: 2px solid;
+              width: 200px;
+              height: 200px;
+              border-radius: 50%;
+
+
+              &:hover {
+                i {
+                  opacity: 1;
+                }
+              }
+
+              img {
+                object-fit: cover;
+                border-radius: 50%;
+              }
+
+              i {
+                transition: all .5s;
+                opacity: 0;
+                position: absolute;
+                background: rgba(0, 0, 0, .53);
+                color: white;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                width: 200px;
+                height: 200px;
+                border-radius: 50%;
+                display: grid;
+                place-items: center;
+                font-size: xx-large;
+              }
+            }
+          }
+
+          &:nth-child(4) {
+            height: 60px;
+            padding-left: 20px;
+            width: 350px;
+
+            .input-group {
+              width: 100%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+
+              div {
+                position: relative;
+
+                input {
+                  margin: 25px;
+                  margin-top: 0px;
+                  width: 20px;
+                  height: 20px;
+                }
+
+                label {
+                  position: absolute;
+                  bottom: 0;
+                  left: 15px;
+                }
+              }
+            }
+          }
+        }
+
+        button {
+          font-family: inherit;
+          font-size: 18px;
+          color: white;
+          display: flex;
+          align-items: center;
+          border: none;
+          border-radius: 16px;
+          overflow: hidden;
+          transition: all 0.2s;
+          cursor: pointer;
+          width: 180px;
+          height: 60px;
+        }
+
+        button span {
+          display: block;
+          margin-left: 0.3em;
+          transition: all 0.3s ease-in-out;
+          color: white;
+        }
+
+        button svg {
+          display: block;
+          transform-origin: center center;
+          transition: transform 0.3s ease-in-out;
+          color: white;
+        }
+
+        button:hover .svg-wrapper {
+          animation: fly-1 0.6s ease-in-out infinite alternate;
+        }
+
+        button:hover svg {
+          transform: translateX(3.5em) rotate(45deg) scale(1.1);
+        }
+
+        button:hover span {
+          transform: translateX(8em);
+        }
+
+        button:active {
+          transform: scale(0.95);
+        }
+
+        @keyframes fly-1 {
+          from {
+            transform: translateY(0.1em);
+          }
+
+          to {
+            transform: translateY(-0.1em);
+          }
+        }
+
+      }
+
 
       .input-control {
         &:nth-child(3) {
@@ -124,11 +321,11 @@
         }
       }
 
-      &>div:last-child {
+      div:last-child {
         color: rgb(117, 115, 115);
       }
 
-      &>div:nth-child(5) {
+      div:nth-child(5) {
         margin: 0;
         margin-top: -20px;
         display: flex;
@@ -142,8 +339,6 @@
           height: 15px;
           accent-color: rgb(50, 130, 250);
         }
-
-        label {}
       }
 
       .input-control {
@@ -155,7 +350,7 @@
         column-gap: 7px;
         padding-bottom: 10px;
 
-        p {
+        &>p {
           font-size: .8em;
           position: absolute;
           top: 43px;
@@ -203,7 +398,7 @@
         }
 
 
-        .icon-control {
+        &>.icon-control {
           i {
             font-size: 20px;
             color: gray;
@@ -211,7 +406,7 @@
 
         }
 
-        .icon-control {
+        &>.icon-control {
           justify-content: center;
           display: grid;
           align-items: center;
@@ -224,10 +419,9 @@
       }
 
 
-      button {
+      &>button {
         font-family: inherit;
         font-size: 18px;
-        background: royalblue;
         color: white;
         padding: 0.7em 1em;
         padding-left: 0.9em;
@@ -239,45 +433,6 @@
         transition: all 0.2s;
         cursor: pointer;
       }
-
-      button span {
-        display: block;
-        margin-left: 0.3em;
-        transition: all 0.3s ease-in-out;
-      }
-
-      button svg {
-        display: block;
-        transform-origin: center center;
-        transition: transform 0.3s ease-in-out;
-      }
-
-      button:hover .svg-wrapper {
-        animation: fly-1 0.6s ease-in-out infinite alternate;
-      }
-
-      button:hover svg {
-        transform: translateX(1.2em) rotate(45deg) scale(1.1);
-      }
-
-      button:hover span {
-        transform: translateX(5em);
-      }
-
-      button:active {
-        transform: scale(0.95);
-      }
-
-      @keyframes fly-1 {
-        from {
-          transform: translateY(0.1em);
-        }
-
-        to {
-          transform: translateY(-0.1em);
-        }
-      }
-
     }
   }
 
@@ -331,8 +486,9 @@
 }
 
 .otp-root {
-  border: 2px solid;
-  width: 100%;
+  display: grid;
+  place-items: center;
+  row-gap: 50px;
 
   .input-group {
     display: grid;
@@ -340,8 +496,44 @@
     grid-auto-flow: column;
 
     input {
+      margin: 10px;
       width: 50px;
       height: 100px;
+      border: 2px solid rgb(190, 187, 187);
+      font-size: 4em;
+      text-align: center;
+      border-radius: 20px;
+      color: rgb(78, 77, 77);
+    }
+  }
+
+  &>div {
+    &:nth-child(3) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      column-gap: 10px;
+      row-gap: 10px;
+      button {
+        font-family: inherit;
+        font-size: 18px;
+        background: royalblue;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
+        border: none;
+        border-radius: 16px;
+        overflow: hidden;
+        transition: all 0.2s;
+        cursor: pointer;
+        width: 180px;
+        height: 60px;
+        &:hover {
+          background: rgb(4, 121, 255);
+        }
+      }
     }
   }
 }
