--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   text-align: center;
   width: 100vw;
-  height: 100vh;
+  height: auto;
   box-sizing: border-box;
   overflow-x: hidden;
 }
@@ -1231,25 +1231,45 @@
   display: grid;
   place-items: center;
   grid-template-areas: 'start end';
+  position: relative;
 
+  .background{
+    position: absolute;
+    background: #48c6ef;
+    width:65%;
+    height: 100%;
+    left:0;
+    z-index:0;
+    border-radius:0% 100% 100% 0% / 100% 0% 100% 0%;
+    
+  }
   .text {
+    z-index:1;
     width: 50vw;
     height: 100px;
     display: flex;
     justify-content: center;
     height: 500px;
     flex-direction: column;
-    padding: 0;
+    padding-left:10px;
     margin: 0;
-
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-style: normal;
+    color:#252525;
     p {
       &:nth-child(1) {
         font-size: clamp(2rem, 0.3043rem + 3.4783vw, 3rem);
         text-align: start;
         margin: 0;
       }
-
       &:nth-child(2) {
+        font-size: clamp(2rem, 0.3043rem + 3.4783vw, 3rem);
+        text-align: start;
+        margin: 0;
+      }
+
+      &:nth-child(3) {
         font-size: clamp(1rem, 0.3043rem + 3.4783vw, 1.2rem);
         text-align: start;
 
@@ -1270,7 +1290,6 @@
   flex-direction: column;
   padding: 50px;
   overflow: hidden;
-
   .cube {
     width: 300px;
     height: 300px;
@@ -1316,6 +1335,7 @@
     img {
       object-fit: cover;
       animation: imgAnim 8s ease-in-out infinite;
+      mix-blend-mode: multiply;
     }
 
     .scanner {
@@ -1925,6 +1945,9 @@
     position: relative;
     margin-bottom: 80px;
 
+    .background{
+      width:100%;
+    }
     .container {
       width: 100%;
       padding-top: 50px;
